[package]
name = "openai"
version = "1.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>", "valentinegb"]
edition = "2021"
description = "An unofficial Rust library for the OpenAI API."
repository = "https://github.com/rellfy/openai"
license = "MIT"
keywords = ["ai", "machine-learning", "openai", "library"]

[dependencies]
serde_json = "1.0.94"
derive_builder = "0.20.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart"], optional = true }
serde = { version = "1.0.157", features = ["derive"] }
reqwest-eventsource = "0.6"
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.70"
futures-util = "0.3.28"
bytes = "1.4.0"
schemars = "0.8.22"
derive_more = { version = "2.0.1", features = ["from"] }

[dev-dependencies]
dotenvy = "0.15.7"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
