[package]
name = "openai_bootstrap"
version = "1.0.0-alpha.3"
authors.workspace = true
edition.workspace = true
description = "Bootstrapping crate for the openai crate."
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
features = ["derive"]
