[package]
name = "openai_proc_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
convert_case = "0.6"

[dependencies.reqwest]
version = "0.11"
features = [ "blocking", "json" ]

[dependencies.openai_bootstrap]
path = "../openai_bootstrap"

[dependencies.serde]
version = "1.0"
features = ["derive"]
