[package]
name = "openai_proc_macros"
version = "1.0.0-alpha.6"
authors.workspace = true
edition.workspace = true
description = "Procedural macros for use in openai crate."
documentation.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.25"
serde_json = "1.0.94"
dotenvy = "0.15.1"
convert_case = "0.6.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
openai_bootstrap = { path = "../openai_bootstrap", version = "1.0.0-alpha.3" }
serde = { version = "1.0.155", features = ["derive"] }
