[package]
name = "chat_stream_cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
futures-util = "0.3.28"
openai = { path = "../../" }
tokio = { version = "1.26.0", features = ["full"] }
